Bug 1613384 - Fix race condition setting GC performance hint r=sfink

This is easy enough to fix.

Differential Revision: https://phabricator.services.mozilla.com/D61808

--HG--
extra : moz-landing-system : lando